Update new test to Java 16