@@ -208,10 +208,10 @@ public final class InjectorNodeFinderImplTest
         String modId2 = "testmod2";
         String modId3 = "testmod3";
         String modId4 = "testmod4";
-        loaderHelperStub.addMod(modId, Collections.emptySet());
-        loaderHelperStub.addMod(modId2, Sets.newHashSet(modId, missingModId));
-        loaderHelperStub.addMod(modId3, Sets.newHashSet(modId2));
-        loaderHelperStub.addMod(modId4, Sets.newHashSet(modId3));
+        loaderHelperStub.addMod(modId, Set.of());
+        loaderHelperStub.addMod(modId2, Set.of(modId, missingModId));
+        loaderHelperStub.addMod(modId3, Set.of(modId2));
+        loaderHelperStub.addMod(modId4, Set.of(modId3));
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getParentNode(modId3);
